--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,4 @@ en:
     no_largest_blobs: "No Blobs available"
     deletable_blobs: "Deletable Blobs"
     cta_free_space: "Free up space"
+    cta_see_all: "See all"
