--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -14,3 +14,6 @@ it:
     deletable_blobs: "Blob eliminabili"
     cta_free_space: "Libera spazio"
     cta_see_all: "Vedi tutti"
+    blobs: "Blob"
+    attachments: "Allegati"
+    variant_records: "Varianti"
