--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -17,3 +17,4 @@ it:
     blobs: "Blob"
     attachments: "Allegati"
     variant_records: "Varianti"
+    optimize_performances_active: "I dati visualizzati sono cachati per ottimizzare le prestazioni. I valori mostrati non sono quindi aggiornati in tempo reale e potrebbero non riflettere le modifiche più recenti."
